lwb-specific-implementations/monticore-scolar-instance/mc-language-component-tool/src/test/resources/cocos/invalid/ReferencedGrammarNotExists.comp
package cocos.invalid;

language component ReferencedGrammarNotExists {

  grammar mc.lang.BlaBla;

  provides production A;
}